--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,78 @@
-﻿flask==2.3.3
+﻿"""
+Stock Prediction API Dependencies
+=================================
+
+Version-pinned requirements for the Flask stock prediction application.
+Each dependency serves a specific role in the data pipeline and web stack.
+
+Install with: pip install -r requirements.txt
+"""
+
+# Web Framework
+flask==2.3.3
+"""
+Flask - Core web framework for building the API and serving templates.
+Provides routing, request handling, and response management.
+"""
+
+# Cross-Origin Resource Sharing
 flask-cors==4.0.0
+"""
+Flask-CORS - Enables browser-based API access from different domains.
+Handles CORS headers and pre-flight requests.
+"""
+
+# Financial Data
 yfinance==0.2.28
+"""
+yFinance - Downloads historical stock data from Yahoo Finance.
+Provides OHLCV data, dividends, and stock splits.
+"""
+
+# Machine Learning
 scikit-learn==1.3.0
+"""
+scikit-learn - Machine learning algorithms for price prediction.
+Includes RandomForest, LinearRegression, SVR, and preprocessing tools.
+"""
+
+# Data Manipulation
 pandas==2.0.3
+"""
+pandas - Data analysis library for time-series manipulation.
+Used for feature engineering, cleaning, and data preparation.
+"""
+
+# Numerical Computing
 numpy==1.25.2
+"""
+NumPy - Foundation for numerical operations and array management.
+Required by pandas and scikit-learn for matrix operations.
+"""
+
+# Visualization (Development)
 matplotlib==3.7.2
+"""
+Matplotlib - Plotting library for visualizing predictions and results.
+Optional for development and data analysis.
+"""
+
+# Interactive Development
 jupyter==1.0.0
+"""
+Jupyter - Interactive computing environment for experimentation.
+Development dependency for notebooks and exploration.
+"""
+
+# Configuration Management
 python-dotenv==1.0.0
+"""
+python-dotenv - Loads environment variables from .env files.
+Manages configuration for different environments.
+"""
+
+# Production Server
 gunicorn==21.2.0
+"""
+Gunicorn - Production WSGI server for deploying Flask applications.
+Replaces the development server in production environments.
